[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Scripts/MenuCam.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/hypik.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Fonts/hypik_small.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/MainMenu.gd" type="Script" id=4]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 4 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_left = -32.0
margin_right = 33.0
margin_bottom = 69.0
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect3" type="ColorRect" parent="Control"]
margin_left = 148.0
margin_top = -220.0
margin_right = 221.0
margin_bottom = 797.0
rect_rotation = -74.9999
rect_pivot_offset = Vector2( 25.7605, 454.162 )
color = Color( 0.933333, 0, 1, 1 )

[node name="ColorRect2" type="ColorRect" parent="Control"]
margin_left = 367.0
margin_top = -402.0
margin_right = 440.0
margin_bottom = 615.0
rect_rotation = -74.9999
rect_pivot_offset = Vector2( 25.7605, 454.162 )
color = Color( 0.933333, 0, 1, 1 )

[node name="Label" type="Label" parent="Control"]
margin_left = 46.0
margin_top = -31.0
margin_right = 715.0
margin_bottom = 198.0
rect_rotation = 15.0
custom_fonts/font = ExtResource( 2 )
text = "SpaceCat
KnifeParty"
align = 1

[node name="Start_Button" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -296.0
margin_top = 170.0
margin_right = 905.0
margin_bottom = 222.0
rect_rotation = 15.0
custom_fonts/font = ExtResource( 3 )
text = "Start"

[node name="startbox" type="ColorRect" parent="Start_Button"]
show_behind_parent = true
margin_left = 721.975
margin_top = -427.425
margin_right = 773.975
margin_bottom = 802.575
rect_rotation = 89.9999
rect_pivot_offset = Vector2( 25.7605, 454.162 )
mouse_filter = 1
color = Color( 0.933333, 0, 1, 1 )

[node name="Label" type="Label" parent="Start_Button"]
margin_left = 537.878
margin_top = 5.991
margin_right = 663.878
margin_bottom = 51.991
mouse_filter = 1
custom_fonts/font = ExtResource( 3 )
text = "Start"

[node name="Credits_Button" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -362.0
margin_top = 217.0
margin_right = 839.0
margin_bottom = 269.0
rect_rotation = 15.0
custom_fonts/font = ExtResource( 3 )
text = "Credits"

[node name="creditsbox" type="ColorRect" parent="Credits_Button"]
show_behind_parent = true
margin_left = 720.75
margin_top = -428.132
margin_right = 772.75
margin_bottom = 801.868
rect_rotation = 89.9999
rect_pivot_offset = Vector2( 25.7605, 454.162 )
mouse_filter = 1
color = Color( 0.933333, 0, 1, 1 )

[node name="Label2" type="Label" parent="Credits_Button"]
margin_left = 507.019
margin_top = 2.87158
margin_right = 696.019
margin_bottom = 48.8716
mouse_filter = 1
custom_fonts/font = ExtResource( 3 )
text = "Credits"

[node name="Quit_Button" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -472.0
margin_top = 252.0
margin_right = 729.0
margin_bottom = 304.0
rect_rotation = 15.0
custom_fonts/font = ExtResource( 3 )
text = "Quit"

[node name="quitbox" type="ColorRect" parent="Quit_Button"]
show_behind_parent = true
margin_left = 721.716
margin_top = -428.391
margin_right = 773.716
margin_bottom = 801.609
rect_rotation = 89.9999
rect_pivot_offset = Vector2( 25.7605, 454.162 )
mouse_filter = 1
color = Color( 0.933333, 0, 1, 1 )

[node name="Label3" type="Label" parent="Quit_Button"]
margin_left = 550.435
margin_top = 2.62631
margin_right = 739.435
margin_bottom = 48.6263
mouse_filter = 1
custom_fonts/font = ExtResource( 3 )
text = "Quit"

[connection signal="mouse_entered" from="Start_Button" to="." method="_on_Start_Button_mouse_entered"]
[connection signal="mouse_exited" from="Start_Button" to="." method="_on_Start_Button_mouse_exited"]
[connection signal="mouse_entered" from="Credits_Button" to="." method="_on_Credits_Button_mouse_entered"]
[connection signal="mouse_exited" from="Credits_Button" to="." method="_on_Credits_Button_mouse_exited"]
[connection signal="mouse_entered" from="Quit_Button" to="." method="_on_Quit_Button_mouse_entered"]
[connection signal="mouse_exited" from="Quit_Button" to="." method="_on_Quit_Button_mouse_exited"]
[connection signal="pressed" from="Quit_Button" to="." method="_on_Quit_Button_pressed"]
